Add documentation block

--- a/index.html
+++ b/index.html
@@ -17,5 +17,21 @@
     <button id="getResult">Получить результат</button>
 
     <div id="result"></div>
+
+    <div class="docs">
+        <h2>Документация</h2>
+        <div class="docs-content">
+            <h3>Front-app</h3>
+            <p class="repo"><a href="https://github.com/AxenovN/calculator_front--test-prj">Репозиторий</a></p>
+        </div>
+        <div class="docs-content">
+            <h3>Back-service Calculator</h3>
+            <p class="repo"><a href="https://github.com/AxenovN/calc--test-prj">Репозиторий</a></p>
+        </div>
+        <div class="docs-content">
+            <h3>API Gateway</h3>
+            <p class="in-development">In development...</p>
+        </div>
+    </div>
 </body>
 </html>
